--- a/index.html
+++ b/index.html
@@ -1,30 +1,4 @@
 ---
 layout: home
 ---
-
-<div class="home">
-
-{% for post in site.posts %}
-          {% if post.title %}
-          
-		  <div class="well">
-		  <table class="table">
-		  <thead>
-		  <tr>
-		  <a class="page-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-		  <span class="pull-right">
-		  {{ post.date | date: "%b %-d, %Y" }}
-		  </span>
-		  </tr>
-		  </thead>
-		 <tbody>
-		 <tr><td>{{ post.content }}</td></tr>
-		 
-		 </tbody>
-		 </table> 
-		  </div>
-		 
-          {% endif %}
-        {% endfor %}
-
-</div>
+{% include all.html %}
