revert to no jsonp until later edition

--- a/jEx.html
+++ b/jEx.html
@@ -47,15 +47,10 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, exercitation
 <script>
 /** fake data **/
 
-//get data for
-//data.labels ...political party
-//data.datasets.data ...vote breakdown.party.[party].[vote]
-
-
 
 
 var data= {
-labels: [],
+labels: ["January", "Februray", "March", "April"],
 datasets: [
 {
 label: "My first dataset", 
@@ -69,21 +64,6 @@ data: [65, 59, 80, 55]
 }
 ]
 };
-
-
-
-
-var votes = $.ajax({
-  url: "http://congress.api.sunlightfoundation.com/votes?year=2015&apikey=b5115cfa066c40169cf1da03e669e40d",
-  beforeSend: function( xhr ) {
-    xhr.overrideMimeType( "text/plain; charset=x-user-defined" );
-  }
-})
-  .done(function( data ) {
-    if ( console && console.log ) {
-      console.log( "Sample of data:", data.slice( 0, 100 ) );
-    }
-  });
 
 /**global options **/
 var options= Chart.defaults.global;
