update header to add post per category counter and only display categories with posts in the menu.

--- a/mandala1.html
+++ b/mandala1.html
@@ -222,8 +222,6 @@ top:0;left:0;
   left: 50px;
     z-index: 5;
 
-  
-
 }
 
 .c1{
@@ -433,7 +431,7 @@ background-color: transparent;
    to{left: -100%;}
  }
 </style>
-<div class="wrapper">
+<div class="wrapper-mandala">
 <div class="mandala">
   <div class="heavens">
     <div class="sun"></div>
