--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ $(document).ready(function(){
     var yPos = -($window.scrollTop() / $scroll.data('speed'));
 
     // background position
-    var coords = '50% '+ yPos + 'px';
+    var coords = '0'+ yPos + 'px';
 
     // move the background
     $scroll.css({ backgroundPosition: coords });   
@@ -49,3 +49,8 @@ $(document).ready(function(){
 
 }); // close out script
 </script>
+<script>	$('#top-nav').onePageNav({
+    currentClass: 'active',
+    changeHash: true,
+    scrollSpeed: 1200
+});</script>
