add animation css and animate nav li site title, intro prof and blockquote

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ nextSelector: 'a.next:last',
 contentSelector: '.page-content'
 }).fadeIn('slow', function(){});
 
-
-$(document).ready(function(){
+/**$(document).ready(function(){
    // cache the window object
    $window = $(window);
 
@@ -48,4 +47,5 @@ $(document).ready(function(){
 
 
 }); // close out script
+	**/
 </script>
