--- a/index.html
+++ b/index.html
@@ -48,4 +48,23 @@ contentSelector: '.page-content'
 
 }); // close out script
 	**/
+	//Scroll to Top function http://jsfiddle.net/neeklamy/RpPEe/
+   /** $(window).scroll(function () {
+        if ($(this).scrollTop() > 100) {
+            $('.scrollup').fadeIn();
+        } else {
+            $('.scrollup').fadeOut();
+        }
+    });
+
+    $('.scrollup').click(function () {
+        $("html, body").animate({
+            scrollTop: 0
+        }, 600);
+        return false;
+    }); **/
+	
+
 </script>
+
+<!--     <a href="#" class="scrollup">^</a> -->
